--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ db.password:
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: update
+hibernate.hbm2ddl.auto: create
 entitymanager.packagesToScan: com
